# rmdups

./: .gitmodules  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: release.yml
src/: algorithm.rs  args.rs  lib.rs  main.rs  metadata.rs  utils.rs
src/io/: mod.rs
test/: W62subA_chr1C_5M.bam.csi
