[package]
name = "rmduprs"
version = "0.1.0"
edition = "2024"

[dependencies]
noodles = { version = "0.104.0", features = ["bam", "sam", "bgzf"] }
clap = { version = "4.5.56", features = ["derive"] }
lz4_flex = "0.12.0"
roaring = "0.11.3"
tempfile = "3.24.0"
anyhow = "1.0.100"
fastrand = "2.0"
bstr = "1.12.1"
rayon = "1.10"
crossbeam-channel = "0.5"

# 仅在非 Windows 平台使用 mimalloc
[target.'cfg(not(windows))'.dependencies]
mimalloc = "0.1.48"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"